hphp/test/zend/good/ext/iconv/tests/iconv_strpos_variation1.php.skipif
<?hh
extension_loaded('iconv') || die('skip');
function_exists('iconv_strpos') || die("skip iconv_strpos() is not available in this build");
