hphp/test/zend/bad/ext/iconv/tests/iconv_strpos_variation3.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_strpos') or die("skip iconv_strpos() is not available in this build");
if (PHP_INT_SIZE != 4) die("skip this test is for 32bit platform only");
?>